[package]
name = "raft-demo3"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "raft-key-value-rocks"
path = "src/bin/main.rs"

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
byteorder = "1.4.3"
clap = { version = "4.1.11", features = ["derive", "env"] }
reqwest = { version = "0.11.9", features = ["json"] }
rocksdb = "0.22.0"
serde = { version = "1.0.114", features = ["derive"] }
# for toy-rpc, use `serde_json` instead of the default `serde_bincode`:
# bincode which enabled by default by toy-rpc, does not support `#[serde(flatten)]`: https://docs.rs/bincode/2.0.0-alpha.1/bincode/serde/index.html#known-issues
toy-rpc = { version = "0.8.6", features = [
    "ws_tokio",
    "server",
    "client",
    "tokio_runtime",
] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.0", features = ["env-filter"] }
openraft = { version = "0.9.5", features = ["serde", "storage-v2"] }
ntex = { version = "1", features = ["tokio"] }
serde_json = "1"
anyhow = "1.0.82"
thiserror = "1.0.58"
[dev-dependencies]
maplit = "1.0.2"
tempfile = { version = "3.4.0" }
