[package]
name = "raft-demo3"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "raft-key-value-rocks"
path = "src/bin/main.rs"

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
byteorder = "1.4.3"
clap = { version = "4.1.11", features = ["derive", "env"] }
reqwest = { version = "0.11.9", features = ["json"] }
serde = { version = "1.0.114", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.0", features = ["env-filter"] }
openraft = { version = "0.9.5", features = ["serde", "storage-v2"] }
ntex = { version = "1", features = ["tokio"] }
serde_json = "1"
anyhow = "1.0.82"
thiserror = "1.0.58"
sled = "0.34.7"
volo.workspace = true
volo-gen = { path = "./volo-gen" }
volo-thrift.workspace = true
pilota.workspace = true

[dev-dependencies]
maplit = "1.0.2"
tempfile = { version = "3.4.0" }

[workspace]
members = ["volo-gen"]
resolver = "2"
[workspace.package]
edition = "2021"
[workspace.dependencies]
# we recommend to use the latest framework version for new features and bug fixes
volo = "*"
volo-build = "*"
volo-thrift = "*"
pilota = "*"
anyhow = "1.0.82"
tokio = { version = "1.35.1", features = ["full"] }
[profile.release]
opt-level = 3
debug = true
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 1
rpath = false
